--- a/src/main/resources/templates/application/dtoResponse.mustache
+++ b/src/main/resources/templates/application/dtoResponse.mustache
@@ -19,7 +19,7 @@ public class {{name}}Response implements Serializable {
 
 {{#fields}}
 	@Schema(description = "{{description}}", example = "{{example}}")
-	private {{realType}} {{name}};
+	private {{primitiveType}} {{name}};
 {{/fields}}
 
 }
