--- a/src/main/resources/templates/domain/aggregate.mustache
+++ b/src/main/resources/templates/domain/aggregate.mustache
@@ -9,6 +9,9 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import java.util.Date;
+{{#fieldFiles}}
+import org.springframework.web.multipart.MultipartFile;
+{{/fieldFiles}}
 
 @Getter
 @Setter
