--- a/src/main/resources/templates/infrastructure/entity.mustache
+++ b/src/main/resources/templates/infrastructure/entity.mustache
@@ -1,7 +1,7 @@
 package {{package}};
 
 {{#imports}}
-	import {{.}};
+import {{.}};
 {{/imports}}
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
@@ -20,12 +20,12 @@ import lombok.Setter;
 @Table(name = "{{tableName}}")
 public class {{name}} {
 
-@Id
-//@GeneratedValue(strategy = GenerationType.UUID)
-private String id;
+	@Id
+	//@GeneratedValue(strategy = GenerationType.UUID)
+	private String id;
 {{#fields}}
-	@Column(nullable = false, name="{{name}}")
-	private {{type}} {{name}};
+	@Column(nullable = false)
+	private {{primitiveType}} {{name}};
 {{/fields}}
 
 }
