--- a/src/main/resources/templates/tests/fixtures.mustache
+++ b/src/main/resources/templates/tests/fixtures.mustache
@@ -1,7 +1,7 @@
 package {{package}};
 
 {{#imports}}
-import {{.}};
+	import {{.}};
 {{/imports}}
 
 import {{base}}.{{vo}}.*;
@@ -9,6 +9,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import org.axonframework.commandhandling.gateway.CommandGateway;
+import org.springframework.mock.web.MockMultipartFile;
 
 public class {{name}}Fixtures {
 
@@ -59,19 +60,25 @@ repository.deleteAll();
 }
 
 public static String randomOneViaCommand(CommandGateway commandGateway) {
-
 Create{{name}}Command command = new Create{{name}}Command(
 {{#fields}}
 	{{^isId}}
-		{{entity}}{{nameCapitalized}}.create(
-		{{#isString}}"Sample {{nameCapitalized}}"{{^last}}),{{/last}}{{/isString}}
-		{{#isInteger}}123{{^last}}),{{/last}}{{/isInteger}}
-		{{#isDouble}}999.99{{^last}}),{{/last}}{{/isDouble}}
-		{{^isString}}{{^isInteger}}{{^isDouble}}null{{^last}},{{/last}}{{/isDouble}}{{/isInteger}}
-		{{/isString}}
+			{{entity}}{{nameCapitalized}}.create(
+			{{#isString}}"Sample {{nameCapitalized}}"{{/isString}}
+			{{#isInteger}}123{{/isInteger}}
+			{{#isDouble}}999.99{{/isDouble}}
+			{{^isString}}{{^isInteger}}{{^isDouble}}null{{/isDouble}}{{/isInteger}}{{/isString}}
+			){{^last}},{{/last}}
 	{{/isId}}
 {{/fields}}
-));
+{{#hasFiles}},
+{{#fieldFiles}}
+	new MockMultipartFile("{{nameCamelCase}}", "fake.txt", "text/plain", "Hello".getBytes()){{^last}},{{/last}}
+{{/fieldFiles}}
+{{/hasFiles}}
+);
 return commandGateway.sendAndWait(command).toString();
 }
+
+
 }
