--- a/src/main/resources/templates/application/command.mustache
+++ b/src/main/resources/templates/application/command.mustache
@@ -13,9 +13,6 @@ import lombok.Builder;
 import java.util.Date;
 import org.axonframework.modelling.command.TargetAggregateIdentifier;
 import java.util.UUID;
-{{#fieldFiles}}
-import org.springframework.web.multipart.MultipartFile;
-{{/fieldFiles}}
 
 
 @Getter
@@ -30,22 +27,22 @@ public class {{name}}Command implements Serializable {
 {{/fields}}
 {{#isDeleted}}private {{entity}}Id id;{{/isDeleted}}
 {{#isCreated}}
-{{#hasFiles}} {{#fieldFiles}} private MultipartFile {{nameCamelCase}};{{/fieldFiles}}{{/hasFiles}}
+{{#hasFiles}} {{#fieldFiles}} private {{type}} {{nameCamelCase}};{{/fieldFiles}}{{/hasFiles}}
 {{/isCreated}}
 
 {{#isCreated}}
-	public {{name}}Command(
-	{{#fields}} {{^isId}}  {{entity}}{{nameCapitalized}} {{nameLowerCase}} {{^last}},{{/last}} {{/isId}}
-	{{/fields}}
-	{{#hasFiles}},{{#fieldFiles}} MultipartFile {{nameCamelCase}}{{^last}},{{/last}}{{/fieldFiles}}{{/hasFiles}}
-	){
-	this.id = {{entity}}Id.create(UUID.randomUUID().toString());
-	{{#fields}} {{^isId}} this.{{name}} = {{nameLowerCase}} ; {{/isId}}
-	{{/fields}}
-	{{#fieldFiles}}  this.{{name}} = {{nameLowerCase}} ;
-	{{/fieldFiles}}
+public {{name}}Command(
+{{#fields}} {{^isId}}  {{entity}}{{nameCapitalized}} {{nameLowerCase}} {{^last}},{{/last}} {{/isId}}
+{{/fields}}
+{{#hasFiles}},{{#fieldFiles}} {{type}} {{nameCamelCase}}{{^last}},{{/last}}{{/fieldFiles}}{{/hasFiles}}
+){
+this.id = {{entity}}Id.create(UUID.randomUUID().toString());
+{{#fields}} {{^isId}} this.{{name}} = {{nameLowerCase}} ; {{/isId}}
+{{/fields}}
+{{#fieldFiles}}  this.{{name}} = {{nameLowerCase}} ;
+{{/fieldFiles}}
 
-	}
+}
 {{/isCreated}}
 
 
