--- a/src/main/resources/templates/tests/createWithFilesControllerIntegrationTest.mustache
+++ b/src/main/resources/templates/tests/createWithFilesControllerIntegrationTest.mustache
@@ -17,31 +17,33 @@ void it_should_be_able_to_add_{{nameLower}}() {
 {{name}}Request requestDTO = {{name}}Request.random();
 
 MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
-body.add("metadata", requestDTO);
+{{#fields}}
+	{{^isId}}
+		body.add("{{nameCamelCase}}", requestDTO.get{{nameCapitalized}}().toString());
+	{{/isId}}
+{{/fields}}
 {{#fieldFiles}}
-body.add("{{nameCamelCase}}", createFile());
+	body.add("{{nameCamelCase}}", createFile());
 {{/fieldFiles}}
 
 HttpHeaders headers = new HttpHeaders();
 headers.setContentType(MediaType.MULTIPART_FORM_DATA);
 
-HttpEntity<MultiValueMap<String, Object>> request =
-new HttpEntity<>(body, headers);
+HttpEntity<MultiValueMap<String, Object>> requestEntity = new HttpEntity<>(body, headers);
 
-String uri = "/v1/commands/{{nameLower}}";
+String uri = "/api/v1/commands/{{nameLower}}";
 ResponseEntity<{{name}}Response> response =
-	this.postForEntity(uri, request, {{name}}Response.class);
+	this.postForEntity(uri, requestEntity, {{name}}Response.class);
 
 	assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
 	assertThat(response.getBody()).isNotNull();
 	assertThat(response.getBody().getId()).isNotNull();
+
 	{{#fields}}
-	{{^isId}}
-	assertThat(response.getBody().get{{nameCapitalized}}())
-	.isEqualTo(requestDTO.get{{nameCapitalized}}());
-	{{/isId}}
+		{{^isId}}
+			assertThat(response.getBody().get{{nameCapitalized}}().toString())
+			.isEqualTo(requestDTO.get{{nameCapitalized}}().toString());
+		{{/isId}}
 	{{/fields}}
-
 	}
-
-}
+	}
