--- a/src/main/resources/templates/application/findAllquery.mustache
+++ b/src/main/resources/templates/application/findAllquery.mustache
@@ -7,7 +7,7 @@ import lombok.Getter;
 
 @Getter
 @AllArgsConstructor
-public class List{{name}}Query {
+public class FindAll{{name}}Query {
 
 private final int page;
 private final int limit;
