--- a/src/main/resources/templates/presentation/updateController.mustache
+++ b/src/main/resources/templates/presentation/updateController.mustache
@@ -1,24 +1,22 @@
 package {{package}};
 
 {{#imports}}
-	import {{.}};
+import {{.}};
 {{/imports}}
 
-import {{mapperPackage}}.{{name}}Mapper;
-import {{commandPackage}}.Update{{name}}Command;
-import {{dtoPackage}}.{{name}}Request;
-import {{dtoPackage}}.{{name}}Response;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.axonframework.commandhandling.gateway.CommandGateway;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
+import lombok.AllArgsConstructor;
 
 @RestController
 @RequestMapping("/api/v1/commands/{{nameLowercase}}")
@@ -26,57 +24,45 @@ import org.springframework.web.bind.annotation.*;
 @Slf4j
 public class Update{{name}}Controller {
 
-private final CommandGateway commandGateway;
+private final {{name}}UpdateApplicationService applicationService;
 
-public Update{{name}}Controller(CommandGateway commandGateway) {
-this.commandGateway = commandGateway;
+public Update{{name}}Controller({{name}}UpdateApplicationService  applicationService) {
+this.applicationService = applicationService;
 }
 
-@PutMapping("/{id}")
-@Operation(
-summary = "Update an existing {{nameLowercase}}",
-description = "Updates an existing {{nameLowercase}} by ID and returns the updated entity"
-)
+@Operation(summary = "Update a new {{nameLowercase}}")
 @ApiResponses(value = {
-@ApiResponse(
-responseCode = "200",
-description = "{{name}} updated successfully",
-content = @Content(mediaType = "application/json", schema = @Schema(implementation = {{name}}Response.class))
-),
-@ApiResponse(
-responseCode = "400",
-description = "Invalid input data",
-content = @Content
-),
-@ApiResponse(
-responseCode = "500",
-description = "Internal server error",
-content = @Content
-)
+@ApiResponse(responseCode = "200", description = "{{name}} Updated",
+content = @Content(mediaType = "application/json",
+schema = @Schema(implementation = {{name}}Response.class))),
+@ApiResponse(responseCode = "500", description = "Internal server error",
+content = @Content)
 })
-public ResponseEntity<{{name}}Response> update{{name}}(
-	@Parameter(description = "The ID of the {{nameLowercase}} to update", required = true)
+@PutMapping(value="{id}",  consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+public ResponseEntity<{{name}}Response> add{{name}}(
 	@PathVariable String id,
-
-	@RequestBody
-	@io.swagger.v3.oas.annotations.parameters.RequestBody(
-	description = "{{name}} data to update",
-	required = true,
-	content = @Content(schema = @Schema(implementation = {{name}}Request.class))
-	)
-	{{name}}Request {{nameLowercase}}Request
+	{{#hasFiles}}
+		{{#fieldFiles}}
+			@RequestPart("{{nameCamelCase}}") MultipartFile {{nameCamelCase}}{{^last}},{{/last}}{{/fieldFiles}},
+	{{/hasFiles}}
+	{{#fields}}
+		{{^isId}}
+			@RequestParam("{{nameCamelCase}}") {{primitiveType}} {{nameCamelCase}}{{^last}},{{/last}}
+		{{/isId}}
+	{{/fields}}
 	) {
 	try {
+	{{name}}Response response = applicationService.update{{name}}(
+	{{name}}Id.create(id),
+	{{#fieldFiles}}{{nameCamelCase}}{{^last}}, {{/last}}{{/fieldFiles}}{{#fields}}{{^isId}},
+		{{nameCamelCase}}{{/isId}}{{/fields}}
+	);
 
-	Update{{name}}Command command = {{name}}Mapper.toUpdateCommand(id, {{nameLowercase}}Request);
-
-	commandGateway.sendAndWait(command);
-
-	{{name}}Response response = {{name}}Mapper.toResponse(id,{{nameLowercase}}Request);
 	return ResponseEntity.ok(response);
-	} catch (Exception e) {
-	log.error("Failed to update {{nameLowercase}} with id {}: {}", id, e.getMessage());
+
+	} catch (Exception ex) {
+	log.error("Failed to Update {{nameLowercase}}: {}", ex.getMessage(), ex);
 	return ResponseEntity.internalServerError().build();
 	}
 	}
-}
+	}
