--- a/src/main/resources/templates/domain/vo.mustache
+++ b/src/main/resources/templates/domain/vo.mustache
@@ -5,7 +5,6 @@ import {{.}};
 {{/imports}}
 
 import java.io.Serializable;
-
 import lombok.Getter;
 import lombok.Setter;
 import lombok.AllArgsConstructor;
@@ -25,6 +24,9 @@ this.{{name}} = {{name}};
 }
 
 public static {{voName}} create({{type}} {{name}}) {
+if ({{{invalidCondition}}}) {
+throw new {{exceptionName}}("{{exceptionMessage}}");
+}
 return new {{voName}}({{name}});
 }
 
